# S.P.A.R.K

./: .dockerignore  .env.example  .gitignore  .gitmodules  CLEANUP_SUMMARY.md  COMPLETION_PLAN.md  Dockerfile  ERRORS_FIXED.txt  ERROR_RESOLUTION.md  HYBRID_LLM_ARCHITECTURE.md  ISSUES_RESOLVED.md  LICENSE  PROJECT_COMPLETE.txt  QUICK_START.md  README.md  README_COMPLETE.md  REALTIME_TESTING_GUIDE.md  SPARK_Personal_AI.html  SPARK_STATUS_REPORT.md  WINDOWS_DOCKER_SETUP.md  app.py  check_models.py  check_servers.py  cleanup_project.bat  cloudflared-config.yml  config.json  config.py  current_reqs.txt  debug_css.txt  docker-compose.yml  import_test.txt  index.html  install_log.txt  intent_router.py  main.py  ollama_models.txt  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  (+47 more)
.Jules/: palette.md
.jules/: bolt.md  sentinel.md
.spark_memory/: chroma.sqlite3
api/: audio_daemon.py  auth.py  biometric_stream.py  server.py  startup.py
audio/: __init__.py  device.py  stt.py  tts.py  vad.py  wakeword.py
biometrics/: __init__.py  audio_isolation.py  human_telemetry.py
cognitive/: context_vector_store.py  coreference.py  elliptical_rebuilder.py  knowledge_graph.py  load_regulator.py  multimodal_grounding.py  sarcasm_evaluator.py
config/: mcp_servers.json  secrets.yaml  secrets.yaml.example  settings.yaml
core/: __init__.py  agentic_brain.py  audio_isolation.py  automation.py  background.py  brain_entry.py  cad_engine.py  camera_vision.py  config.py  db_partitioner.py  edge_resilience.py  edge_telemetry.py  generated_tools.py  hand_eye_tracker.py  hardware_bridge.py  heartbeat.py  human_telemetry.py  hybrid.py  industrial_diagnostics.py  intent_router.py  local_brain_chain.py  log_synthesis.py  logging_config.py  main.py  mcp_manager.py  memory.py  memory_loop.py  model_router.py  (+31 more)
(+760 files in other folders)
