[project]
name = "spark"
version = "0.1.0"
description = "S.P.A.R.K. — AI Operating System inspired by Tony Stark's JARVIS"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "python-dotenv",
    "psutil",
]

[project.optional-dependencies]
voice = [
    "pyaudio",
]
vision = [
    "pyautogui",
    "pygetwindow",
    "pyperclip",
    "easyocr",
    "pillow",
]
browser = [
    "playwright",
]
memory = [
    "chromadb",
    "sentence-transformers",
]
iot = [
    "paho-mqtt",
]
llm = [
    "groq",
]
web = [
    "fastapi",
    "uvicorn",
]
dev = [
    "pytest",
    "pytest-asyncio",
]
all = [
    "spark[voice,vision,browser,memory,iot,llm,web,dev]",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["spark*"]

[tool.pytest.ini_options]
testpaths = ["spark/tests"]
asyncio_mode = "auto"
